# EzioEditore

./: README.md
EzioEditore/: CMakeLists.txt  EzioEditore.aps  EzioEditore.rc  drucken.cpp  drucken.h  main.cpp  mainwindow.cpp  mainwindow.h
EzioEditore/images/: styleSheet.qss
